Refactor portfolio layout and enhance responsiveness
The structure of the portfolio has been refactored to improve its visual demonstration on the website. In the index.html file, "profile" and "description" elements were embedded into a newly created "image-container". Creating additional "image-container" and "text-container" divs, this improves content organization. CSS positioning classes ".overlay" and ".overlayH" provide a more distinguishable layout for key information like profession and name.

This change contributes to better user interface by structuring the information in logical sections and making them visually distinct, especially on less wider screens. Also, this change helps ensure the information remains visible and understandable on various screen sizes, enhancing accessibility and user experience. All modified CSS classes are moved under "@media (min-width: 601px) and (max-width: 1250px)" media query which improves site's responsiveness.

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,32 @@ main {
         display: flex;
     }
 
+    .image-container {
+        position: relative;
+    }
+
+    .overlay {
+        position: absolute;
+        right: 50px;
+        bottom: 150px;
+        background: rgba(0, 0, 0, 0.5); /*in case you need semi transparent background */
+        color: white;
+        padding: 10px;
+    }
+
+    .overlayH {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .centered {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* adjust as needed */
+    }
+
     .fixed-section {
         margin-top: 50px;
         position: fixed;
@@ -134,7 +160,6 @@ main {
     }
 
     .experience-entry, .education-entry {
-        flex-basis: calc(50% - 20px);
         margin: 10px;
         box-sizing: border-box;
     }
@@ -150,7 +175,7 @@ main {
     }
 }
 
-@media (max-width: 1250px), (max-width: 600px){
+@media (max-width: 1250px), (max-width: 600px) {
     header, nav ul, footer {
         width: 100%;
     }
@@ -175,6 +200,24 @@ main {
     .skills-grid, .languages-grid, .hobbies-grid {
         display: flex;
         flex-wrap: wrap;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1250px) {
+    .image-container {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .profile {
+        flex-basis: 50%;
+    }
+
+    .profile-picture {
+        width: 100%;
+        height: auto;
     }
 }
 
